--- a/web/themes/custom/practicle/templates/views-view-fields--blogs_listing--block_2.html .twig
+++ b/web/themes/custom/practicle/templates/views-view-fields--blogs_listing--block_2.html .twig
@@ -31,12 +31,17 @@
  * @ingroup themeable
  */
 #}
-<div class="card" style="width: 18rem;">
-  {{fields.field_blog_image.content}}
-  <div class="card-body">
-    <h5 class="card-title">{{fields.title.content}}</h5>
-    <p class="card-text">{{fields.body.content}}</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+<div class="card mb-3" style="max-width: 540px;">
+  <div class="row g-0">
+    <div class="col-md-4">
+      {{fields.field_blog_image.content}}
+    </div>
+    <div class="col-md-8">
+      <div class="card-body">
+        <h5 class="card-title">{{fields.title.content}}</h5>
+        <p class="card-text">{{fields.body.content}}</p>
+        <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+      </div>
+    </div>
   </div>
 </div>
-
